--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -1,5 +1,5 @@
 @article{bahlburg2023,
-	title        = {An intercomparison of models predicting growth of {Antarctic krill (\textit{Euphausia superba})}: The importance of recognizing model specificity},
+	title        = {An intercomparison of models predicting growth of {Antarctic krill ()}: The importance of recognizing model specificity},
 	author       = {Bahlburg, Dominik and Thorpe, Sally E. and Meyer, Bettina and Berger, Uta and Murphy, Eugene J.},
 	year         = 2023,
 	month        = {07},
@@ -288,4 +288,24 @@
 	url          = {https://royalsocietypublishing.org/doi/abs/10.1098/rsos.230520},
 	eprint       = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsos.230520},
 	abstract     = {Understanding the vertical migration behaviour of Antarctic krill is important for understanding spatial distribution, ecophysiology, trophic interactions and carbon fluxes of this Southern Ocean key species. In this study, we analysed an eight-month continuous dataset recorded with an ES80 echosounder on board a commercial krill fishing vessel in the southwest Atlantic sector of the Southern Ocean. Our analysis supports the existing hypothesis that krill swarms migrate into deeper waters during winter but also reveals a high degree of variability in vertical migration behaviour within seasons, even at small spatial scales. During summer, we found that behaviour associated with prolonged surface presence primarily occurred at low surface chlorophyll a concentrations whereas multiple ascent–descent cycles per day occurred when surface chlorophyll a concentrations were elevated. The high plasticity, with some krill swarms behaving differently in the same location at the same time, suggests that krill behaviour is not a purely environmentally driven process. Differences in life stage, physiology and type of predator are likely other important drivers. Finally, our study demonstrates new ways of using data from krill fishing vessels, and with the routine collection of additional information in potential future projects, they have great potential to significantly advance our understanding of krill ecology.}
+}
+@article{https://doi.org/10.1111/risa.14345,
+	title        = {Quantitative risk assessment for the introduction of bluetongue virus into mainland {Europe} by long-distance wind dispersal of {\textit{Culicoides} spp.}: {A case study from Sardinia}},
+	author       = {Bibard, Amandine and Martinetti, Davide and Giraud, Aymeric and Picado, Albert and Chalvet-Monfray, Karine and Porphyre, Thibaud},
+	journal      = {Risk Analysis},
+	doi          = {https://doi.org/10.1111/risa.14345},
+	url          = {https://onlinelibrary.wiley.com/doi/abs/10.1111/risa.14345},
+	keywords     = {bluetongue virus, HYbrid Single-Particle Lagrangian Integrated Trajectory, midges, orbivirus, risk},
+	eprint       = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/risa.14345},
+	abstract     = {Abstract Europe faces regular introductions and reintroductions of bluetongue virus (BTV) serotypes, most recently exemplified by the incursion of serotype 3 in the Netherlands. Although the long-distance wind dispersal of the disease vector, Culicoides spp., is recognized as a virus introduction pathway, it remains understudied in risk assessments. A Quantitative Risk Assessment framework was developed to estimate the risk of BTV-3 incursion into mainland Europe from Sardinia, where the virus has been present since 2018. We used an atmospheric transport model (HYbrid Single-Particle Lagrangian Integrated Trajectory) to infer the probability of airborne dispersion of the insect vector. Epidemiological disease parameters quantified the virus prevalence in vector population in Sardinia and its potential first transmission after introduction in a new area. When assuming a 24h maximal flight duration, the risk of BTV introduction from Sardinia is limited to the Mediterranean Basin, mainly affecting the southwestern area of the Italian Peninsula, Sicily, Malta, and Corsica. The risk extends to the northern and central parts of Italy, Balearic archipelago, and mainland France and Spain, mostly when maximal flight duration is longer than 24h. Additional knowledge on vector flight conditions and Obsoletus complex-specific parameters could improve the robustness of the model. Providing both spatial and temporal insights into BTV introduction risks, our framework is a key tool to guide global surveillance and preparedness against epizootics.}
+}
+@phdthesis{Pilat_2024,
+	title        = {A two-eyed seeing approach to predicting the distribution of skwenkwínem ({Claytonia lanceolata}), a culturally significant plant},
+	author       = {Pilat, Hannah},
+	year         = 2024,
+	series       = {Electronic Theses and Dissertations (ETDs) 2008+},
+	doi          = {http://dx.doi.org/10.14288/1.0443982},
+	url          = {https://open.library.ubc.ca/collections/ubctheses/24/items/1.0443982},
+	school       = {University of British Columbia},
+	collection   = {Electronic Theses and Dissertations (ETDs) 2008+}
 }
