--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -293,7 +293,7 @@
 	title        = {Quantitative risk assessment for the introduction of bluetongue virus into mainland {Europe} by long-distance wind dispersal of {\textit{Culicoides} spp.}: {A case study from Sardinia}},
 	author       = {Bibard, Amandine and Martinetti, Davide and Giraud, Aymeric and Picado, Albert and Chalvet-Monfray, Karine and Porphyre, Thibaud},
 	journal      = {Risk Analysis},
-	doi          = {https://doi.org/10.1111/risa.14345},
+	doi          = {10.1111/risa.14345},
 	url          = {https://onlinelibrary.wiley.com/doi/abs/10.1111/risa.14345},
 	keywords     = {bluetongue virus, HYbrid Single-Particle Lagrangian Integrated Trajectory, midges, orbivirus, risk},
 	eprint       = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/risa.14345},
@@ -304,7 +304,7 @@
 	author       = {Pilat, Hannah},
 	year         = 2024,
 	series       = {Electronic Theses and Dissertations (ETDs) 2008+},
-	doi          = {http://dx.doi.org/10.14288/1.0443982},
+	doi          = {10.14288/1.0443982},
 	url          = {https://open.library.ubc.ca/collections/ubctheses/24/items/1.0443982},
 	school       = {University of British Columbia},
 	collection   = {Electronic Theses and Dissertations (ETDs) 2008+}
