--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -309,3 +309,14 @@
 	school       = {University of British Columbia},
 	collection   = {Electronic Theses and Dissertations (ETDs) 2008+}
 }
+@article{10.3389/ffgc.2024.1422165,
+	title        = {Climatic conditions at provenance origin influence growth stability to changes in climate in two major tree species},
+	author       = {Di Fabio, Alessandro  and Buttò, Valentina  and Chakraborty, Debojyoti  and O’Neill, Gregory A.  and Schueler, Silvio  and Kreyling, Juergen},
+	year         = 2024,
+	journal      = {Frontiers in Forests and Global Change},
+	volume       = 7,
+	doi          = {10.3389/ffgc.2024.1422165},
+	issn         = {2624-893X},
+	url          = {https://www.frontiersin.org/journals/forests-and-global-change/articles/10.3389/ffgc.2024.1422165},
+	abstract     = {<p>Climate change is expected to outpace the rate at which populations of forest trees can migrate. Hence, in forestry there is growing interest in intervention strategies such as assisted migration to mitigate climate change impacts. However, until now the primary focus when evaluating candidates for assisted migration has been mean or maximum performance. We explore phenotypic plasticity as a potentially new avenue to help maintain the viability of species and populations in the face of climate change. Capitalizing on large, multi-site international provenance trials of four economically and ecologically important forest tree species (<italic>Fagus sylvatica</italic>, <italic>Picea abies</italic>, <italic>Picea engelmannii</italic>, <italic>Pinus contorta</italic>), we quantify growth stability as the width of the response function relating provenance growth performance and trial site climate. We found significant differences in growth stability among species, with <italic>P. engelmannii</italic> being considerably more stable than the other three species. Additionally, we found no relationship between growth performance and growth stability of provenances, indicating that there are fast-growing provenances with a broad climate optimum. In two of the four species, provenances’ growth stability showed a significant relationship with the climate of the seed source, the direction of which depends on the species. When taken together with data on growth performance in different climate conditions, a measure of growth stability can improve the choice of species and provenances to minimize future risks in forest restoration and reforestation.</p>}
+}
