--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -320,3 +320,16 @@
 	url          = {https://www.frontiersin.org/journals/forests-and-global-change/articles/10.3389/ffgc.2024.1422165},
 	abstract     = {<p>Climate change is expected to outpace the rate at which populations of forest trees can migrate. Hence, in forestry there is growing interest in intervention strategies such as assisted migration to mitigate climate change impacts. However, until now the primary focus when evaluating candidates for assisted migration has been mean or maximum performance. We explore phenotypic plasticity as a potentially new avenue to help maintain the viability of species and populations in the face of climate change. Capitalizing on large, multi-site international provenance trials of four economically and ecologically important forest tree species (<italic>Fagus sylvatica</italic>, <italic>Picea abies</italic>, <italic>Picea engelmannii</italic>, <italic>Pinus contorta</italic>), we quantify growth stability as the width of the response function relating provenance growth performance and trial site climate. We found significant differences in growth stability among species, with <italic>P. engelmannii</italic> being considerably more stable than the other three species. Additionally, we found no relationship between growth performance and growth stability of provenances, indicating that there are fast-growing provenances with a broad climate optimum. In two of the four species, provenances’ growth stability showed a significant relationship with the climate of the seed source, the direction of which depends on the species. When taken together with data on growth performance in different climate conditions, a measure of growth stability can improve the choice of species and provenances to minimize future risks in forest restoration and reforestation.</p>}
 }
+@article{https://doi.org/10.1002/ael2.20146,
+	title        = {Including non-growing season emissions of {N2O} in {US} maize could raise net {CO2e}ç emissions by 31\% annually},
+	author       = {Buma, Brian},
+	year         = 2024,
+	journal      = {Agricultural \& Environmental Letters},
+	volume       = 9,
+	number       = 2,
+	pages        = {e20146},
+	doi          = {https://doi.org/10.1002/ael2.20146},
+	url          = {https://acsess.onlinelibrary.wiley.com/doi/abs/10.1002/ael2.20146},
+	eprint       = {https://acsess.onlinelibrary.wiley.com/doi/pdf/10.1002/ael2.20146},
+	abstract     = {Abstract Nitrous oxide (N2O) is a significant greenhouse gas and the most important currently emitted ozone depleting substance, primarily via agricultural fertilization. Current N2O emission estimation methods at the national scale are predominantly via emission factors. Models estimating national-scale emissions are focused on growing season emissions. However, a substantial fraction of N2O can be emitted during non-growing season periods. Using newly published off-season N2O emission ratio maps and high-resolution nitrogen application data, this study explores the potential magnitude of underestimated N2O emissions if using only the default growing-season focused methodology. Although there is large variation at county scales (12\%–35\%), non-growing season national emissions are estimated at 31\% of the total, a potential 12,000 Gg CO2e year−1. Further work should better refine emission estimates spatially as well as fully integrate estimates across growing and non-growing seasons.}
+}
