--- a/vignettes/articles/faqs.Rmd
+++ b/vignettes/articles/faqs.Rmd
@@ -504,23 +504,19 @@ library(tidyterra)
 library(geodata)
 library(ggplot2)
 
-temp <- worldclim_country("chile", "tavg", path = ".", )
+temp <- worldclim_country("che", "tavg", path = ".")
 
-chl_cont <- gadm("Chile", level = 0, path = ".", ) %>%
-  disagg()
-
-# Mainland only
-chl_cont <- chl_cont[which.max(expanse(chl_cont)), ]
+che_cont <- gadm("che", level = 0, path = ".")
 
 
-temp_m <- crop(temp, chl_cont, mask = TRUE)
+temp_m <- crop(temp, che_cont, mask = TRUE)
 names(temp_m) <- month.name
 
-
 anim <- ggplot() +
-  geom_spatraster(data = temp_m, maxcell = 100) +
+  geom_spatraster(data = temp_m) +
   scale_fill_viridis_c(
-    option = "inferno", na.value = "transparent",
+    option = "inferno",
+    na.value = "transparent",
     labels = scales::label_number(suffix = "º C")
   ) +
   transition_manual(lyr) +
@@ -530,15 +526,15 @@ anim <- ggplot() +
     axis.ticks = element_blank()
   ) +
   labs(
-    title = "Avg temp Chile: {current_frame}",
+    title = "Avg temp Switzerland: {current_frame}",
     fill = ""
   )
 
-gganimate::animate(anim, duration = 12, rewind = TRUE)
+gganimate::animate(anim, duration = 12, device = "ragg_png")
 ```
 
-```{r include_gif, echo=FALSE, out.width="50%", out.height="50%"}
-knitr::include_graphics("chile_temp.gif")
+```{r include_gif, echo=FALSE}
+knitr::include_graphics("che_temp.gif")
 ```
 
 ## North arrows and scale bar
