--- a/vignettes/articles/faqs.Rmd
+++ b/vignettes/articles/faqs.Rmd
@@ -15,6 +15,8 @@ knitr::opts_chunk$set(
   tidy = "styler",
   out.width = "100%"
 )
+
+pak::pak("tidyverse/ggplot2")
 ```
 
 This is a compendium of [questions
@@ -384,16 +386,14 @@ ggplot() +
 
 This is a long-standing issue in **ggplot2** (see
 [ggplot2/issues/4622](https://github.com/tidyverse/ggplot2/issues/4622)) that is
-fixed in versions \> 3.5.1 (in development at the moment of writing). Use
+fixed in versions \> 3.5.1 (in development at the moment of writing):
 
-``` R
-scale_x_continuous(breaks = scales::pretty_breaks(n = 3)
+``` r
+# Need ggplot2 > 3.5.1 (dev version at the moment of writing)
+pak::pak("tidyverse/ggplot2")
 ```
 
 ```{r breaks}
-# Need ggplot2 > 3.5.1 (dev version at the moment of writing)
-pak::pak("tidyverse/ggplot2")
-
 packageVersion("ggplot2")
 
 library(terra)
