--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -606,3 +606,44 @@
 	},
 	language     = {en}
 }
+@article{d17030195,
+	title        = {
+		{Assessing the Potential Risk of Invasion of the Neophyte \textit{Pluchea ovalis}
+		(Pers.) DC. (Asteraceae) in the Canarian Archipelago Using an Ensemble of
+		Species Distribution Modelling}
+	},
+	author       = {
+		García-Alvarado, Juan José and Pestano-González, Miguel and
+		González-Montelongo, Cristina and Naranjo-Cigala, Agustín and Arévalo, José
+		Ramón
+	},
+	year         = 2025,
+	journal      = {Diversity},
+	volume       = 17,
+	number       = 3,
+	doi          = {10.3390/d17030195},
+	issn         = {1424-2818},
+	url          = {https://www.mdpi.com/1424-2818/17/3/195},
+	article-number = 195,
+	abstract     = {
+		Invasive species represent a significant threat to biodiversity and ecosystem
+		conservation, with their impacts often amplified in island ecosystems.
+		Species distribution models (SDMs) can infer the potential habitat throughout
+		the life of an organism and are considered a valuable tool for predicting the
+		risk of expansion of invasive plants and animals. In our approach, we used an
+		ensemble of four presence–absence models (GLM, GAM, Random Forest, and BART)
+		calibrated only with data collected in Tenerife, the island with the best
+		representation of the species, to infer the habitat suitability for Pluchea
+		ovalis (Pers.) DC. (Asteraceae). Subsequently, we transferred the ensembled
+		model to the rest of the Canarian Island archipelago. Our results show that
+		under near-present conditions, the suitable areas are in the coastal and
+		mid-elevations of the south slope sectors of Tenerife and Gran Canarian
+		Islands, as well as a vast portion of the westernmost and drier islands,
+		always coinciding with ravines and highly disturbed ecosystems. In addition,
+		we forecasted the potential distribution of Pluchea ovalis under different
+		climate change conditions (SSP126, SSP370, and SSP585), showing how its
+		habitability would increase in the worst scenarios. Both contexts favor areas
+		gained by the species in places where they are currently not present,
+		revealing new suitable sectors in the westernmost islands.
+	}
+}
