--- a/README.Rmd
+++ b/README.Rmd
@@ -236,14 +236,14 @@ ggplot(prov) +
   theme_minimal() +
   coord_sf(crs = 25830) +
   labs(
-    fill = "variation",
-    title = "Variation of temperature in Castille and Leon (Spain)",
-    subtitle = "Average temperatures in June vs. May"
+    fill = "Variation",
+    title = "Variation of Temperature in Castile and León (Spain)",
+    subtitle = "Average Temperatures: June vs. May"
   )
 ```
 
-**tidyterra** also provide a geom for plotting RGB `SpatRaster` tiles with
-**ggplot2**
+**tidyterra** also provides a geom for plotting RGB `SpatRaster` tiles with 
+**ggplot2**:
 
 ```{r example-tile}
 rgb_tile <- rast(system.file("extdata/cyl_tile.tif", package = "tidyterra"))
@@ -255,9 +255,9 @@ plot <- ggplot(prov) +
 
 plot
 
-# Recognizes coord_sf()
+# Automatically recognizes and applies coord_sf() for spatial data.
 plot +
-  # Change crs and datum (for relabeling graticules)
+  # Change the CRS and datum (useful for relabeling graticules).
   coord_sf(crs = 3857, datum = 3857)
 ```
 
