--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -647,3 +647,37 @@
 		revealing new suitable sectors in the westernmost islands.
 	}
 }
+@article{MALLORY2025179186,
+	title        = {
+		Mercury in eastern coyotes from {Nova Scotia, Canada}: {Effects} of geography
+		and trophic position
+	},
+	author       = {
+		Mark L. Mallory and Seth MacLean and Julia E. Baak and Michael Boudreau and
+		Jenna M. Priest and André Morrill and Jennifer F. Provencher and Nelson J.
+		O'Driscoll
+	},
+	year         = 2025,
+	journal      = {Science of The Total Environment},
+	volume       = 974,
+	pages        = 179186,
+	doi          = {https://doi.org/10.1016/j.scitotenv.2025.179186},
+	issn         = {0048-9697},
+	url          = {https://www.sciencedirect.com/science/article/pii/S0048969725008216},
+	keywords     = {Methylmercury, , Biomagnification, Hepatic, Otter, Beaver, Fisher},
+	abstract     = {
+		Mercury (Hg) is a global environmental concern due to its wide distribution
+		and myriad of deleterious effects on biota. We studied hepatic Hg in a
+		widespread, top predator in the terrestrial ecosystem of Nova Scotia, Canada,
+		the eastern coyote (Canis latrans), to determine recent concentrations,
+		identify drivers of variation in Hg levels, and assess the utility of this
+		species as a mercury biomonitor for this ecosystem. Coyotes feeding at higher
+		trophic levels, and those in the south and east of the province, had higher
+		Hg concentrations, but there was high variability within and among age-sex
+		groupings. We conclude that coyotes may be useful biomonitors at larger
+		regional scales (e.g., the Maritimes), but we recommend additional research
+		on fishers (Pekania pennanti), a species which we used to compare to coyotes,
+		and for which trophic position and Hg concentrations were surprisingly high
+		at smaller scales within Nova Scotia.
+	}
+}
