--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -661,7 +661,7 @@
 	journal      = {Science of The Total Environment},
 	volume       = 974,
 	pages        = 179186,
-	doi          = {https://doi.org/10.1016/j.scitotenv.2025.179186},
+	doi          = {10.1016/j.scitotenv.2025.179186},
 	issn         = {0048-9697},
 	url          = {https://www.sciencedirect.com/science/article/pii/S0048969725008216},
 	keywords     = {Methylmercury, , Biomagnification, Hepatic, Otter, Beaver, Fisher},
