--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -99,59 +99,45 @@
 	},
 	language     = {en}
 }
-@misc{hattendorf_dirofilaria_2025,
+@article{Hattendorf2025.02.17.638693,
 	title        = {
 		\textit{{Dirofilaria} immitis} and \textit{{D}. repens} in {Europe}: a
 		systematic literature review on vectors, host range, and the spatial
 		distribution in the 20th and 21st century
 	},
-	shorttitle   = {\textit{{Dirofilaria} immitis} and \textit{{D}. repens} in {Europe}},
-	author       = {Hattendorf, Carolin and Lühken, Renke},
+	author       = {Hattendorf, Carolin and L{\"u}hken, Renke},
 	year         = 2025,
-	month        = {feb},
+	journal      = {bioRxiv},
+	publisher    = {Cold Spring Harbor Laboratory},
 	doi          = {10.1101/2025.02.17.638693},
-	url          = {http://biorxiv.org/lookup/doi/10.1101/2025.02.17.638693},
-	urldate      = {2025-03-19},
-	copyright    = {http://creativecommons.org/licenses/by-nc/4.0/},
+	url          = {https://www.biorxiv.org/content/early/2025/02/18/2025.02.17.638693},
+	elocation-id = {2025.02.17.638693},
 	abstract     = {
-		Abstract
-
-		Background
-
-		Dirofilaria immitis and D. repens are mosquito-borne nematodes with dogs as
-		primary hosts, but other mammalian species including humans can be also
-		infected. In the last century, circulation of both pathogens was
+		Background Dirofilaria immitis and D. repens are mosquito-borne nematodes
+		with dogs as primary hosts, but other mammalian species including humans can
+		be also infected. In the last century, circulation of both pathogens was
 		predominantly restricted to Southern Europe. However, different studies
 		indicated a potential establishment in Central, Eastern and Western parts of
-		Europe as an increasing threat to animal and human health.
-
-		Methods
-
-		We conducted a systematic literature review of publications reporting D.
-		immitis and D. repens screening in mosquitoes and mammalian vertebrates in
-		Europe. These data were used to analyse the range of vectors and hosts and
-		for a comparison of the spatial distribution between the 20 th and 21 st
-		century.
-
-		Results
-
-		Both nematodes appear to have a high overlap of Aedes , Anopheles and Culex
-		vector species, which are abundant in Europe. Most D. immitis infections were
-		reported in dogs, while D. repens predominated in humans. Dirofilaria immitis
-		infections were detected in a wider range of wild and zoo animals. Compared
-		to the last century, many more countries especially in Central Europe were
-		affected by Dirofilaria spp. circulation, illustrating a significant spread
-		over the last 20 years.
-
-		Conclusion
-
-		Our findings suggest that D. immitis and D. repens are a growing health
-		concern for animals and humans in Europe. Continuous globalisation and
-		climate warming will probably lead to a further spread and increased
-		circulation in the future. All data are made available open access, which
-		will enable further analysis in the future.
+		Europe as an increasing threat to animal and human health.Methods We
+		conducted a systematic literature review of publications reporting D. immitis
+		and D. repens screening in mosquitoes and mammalian vertebrates in Europe.
+		These data were used to analyse the range of vectors and hosts and for a
+		comparison of the spatial distribution between the 20th and 21st
+		century.Results Both nematodes appear to have a high overlap of Aedes,
+		Anopheles and Culex vector species, which are abundant in Europe. Most D.
+		immitis infections were reported in dogs, while D. repens predominated in
+		humans. Dirofilaria immitis infections were detected in a wider range of wild
+		and zoo animals. Compared to the last century, many more countries especially
+		in Central Europe were affected by Dirofilaria spp. circulation, illustrating
+		a significant spread over the last 20 years.Conclusion Our findings suggest
+		that D. immitis and D. repens are a growing health concern for animals and
+		humans in Europe. Continuous globalisation and climate warming will probably
+		lead to a further spread and increased circulation in the future. All data
+		are made available open access, which will enable further analysis in the
+		future.Competing Interest StatementThe authors have declared no competing
+		interest.
 	},
-	language     = {en}
+	eprint       = {https://www.biorxiv.org/content/early/2025/02/18/2025.02.17.638693.full.pdf}
 }
 @article{su_high_2025,
 	title        = {
@@ -341,53 +327,20 @@
 	},
 	language     = {en}
 }
-@misc{lindgren_inlabru_2024,
+@misc{lindgren2024inlabrusoftwarefittinglatent,
 	title        = {
 		{inlabru}: software for fitting latent {Gaussian} models with non-linear
 		predictors
 	},
-	shorttitle   = {inlabru},
 	author       = {
-		Lindgren, Finn and Bachl, Fabian and Illian, Janine and Suen, Man Ho and Rue,
-		Håvard and Seaton, Andrew E.
+		Finn Lindgren and Fabian Bachl and Janine Illian and Man Ho Suen and Håvard
+		Rue and Andrew E. Seaton
 	},
 	year         = 2024,
-	publisher    = {arXiv},
-	doi          = {10.48550/ARXIV.2407.00791},
 	url          = {https://arxiv.org/abs/2407.00791},
-	urldate      = {2025-03-19},
-	copyright    = {arXiv.org perpetual, non-exclusive license},
-	note         = {Version Number: 1},
-	abstract     = {
-		The integrated nested Laplace approximation (INLA) method has become a
-		popular approach for computationally efficient approximate Bayesian
-		computation. In particular, by leveraging sparsity in random effect precision
-		matrices, INLA is commonly used in spatial and spatio-temporal applications.
-		However, the speed of INLA comes at the cost of restricting the user to the
-		family of latent Gaussian models and the likelihoods currently implemented in
-		\{INLA\}, the main software implementation of the INLA methodology.
-		\{inlabru\} is a software package that extends the types of models that can
-		be fitted using INLA by allowing the latent predictor to be non-linear in its
-		parameters, moving beyond the additive linear predictor framework to allow
-		more complex functional relationships. For inference it uses an approximate
-		iterative method based on the first-order Taylor expansion of the non-linear
-		predictor, fitting the model using INLA for each linearised model
-		configuration. \{inlabru\} automates much of the workflow required to fit
-		models using \{R-INLA\}, simplifying the process for users to specify, fit
-		and predict from models. There is additional support for fitting joint
-		likelihood models by building each likelihood individually. \{inlabru\} also
-		supports the direct use of spatial data structures, such as those implemented
-		in the \{sf\} and \{terra\} packages. In this paper we outline the
-		statistical theory, model structure and basic syntax required for users to
-		understand and develop their own models using \{inlabru\}. We evaluate the
-		approximate inference method using a Bayesian method checking approach. We
-		provide three examples modelling simulated spatial data that demonstrate the
-		benefits of the additional flexibility provided by \{inlabru\}.
-	},
-	keywords     = {
-		62-04, Computation (stat.CO), FOS: Computer and information sciences,
-		Methodology (stat.ME)
-	}
+	eprint       = {2407.00791},
+	archiveprefix = {arXiv},
+	primaryclass = {stat.ME}
 }
 @article{di_fabio_climatic_2024,
 	title        = {
@@ -492,49 +445,43 @@
 	},
 	language     = {en}
 }
-@misc{kutza_endemic_2025,
+@article{Kutza2025.01.09.632230,
 	title        = {
-		Endemic and invasion dynamics of wild tomato species on the {Galápagos}
+		Endemic and invasion dynamics of wild tomato species on the {Gal{\'a}pagos}
 		{Islands}, across two centuries of collection records
 	},
 	author       = {Kutza, Alex D. and Hert, Zoe L. and Moyle, Leonie C.},
 	year         = 2025,
-	month        = {jan},
+	journal      = {bioRxiv},
+	publisher    = {Cold Spring Harbor Laboratory},
 	doi          = {10.1101/2025.01.09.632230},
-	url          = {http://biorxiv.org/lookup/doi/10.1101/2025.01.09.632230},
-	urldate      = {2025-03-19},
-	copyright    = {http://creativecommons.org/licenses/by-nc-nd/4.0/},
+	url          = {https://www.biorxiv.org/content/early/2025/01/11/2025.01.09.632230},
+	elocation-id = {2025.01.09.632230},
 	abstract     = {
-		Summary
-
-		We aggregated digitized herbarium and other collection records—spanning
-		{\textgreater}225 years since 1795—to assess the biological, geographical,
-		and historical factors shaping distributions of three wild tomato species on
-		the Galápagos Islands, and to infer future threats to the two endemic species
-		( Solanum cheesmaniae and S. galapagense ) and risks posed by their invasive
-		congener ( S. pimpinellifolium ).
-
-		Combining {\textgreater}400 unique geolocated Galápagos records with
-		bioclimate data and species distribution modelling, we quantified the
-		geo-spatial distribution of each species, bracketed the historical timing and
-		location of introductions of the invasive species, characterized species
-		bioclimate envelopes, and projected suitable habitat overlap.
-
-		We infer that dispersal limitation and alternative selective histories shape
-		current species distributions, and that anthropogenic change has and will
-		continue to have different impacts on the two endemic species—closely
-		associated with their different geographic and environmental distributions.
-		We also identify plausible avenues for, and limits to, future invasive
-		expansion.
-
-		These data vastly extend the temporal and spatial reach of our direct
-		historical inferences, provide a critical complement to genomic analyses of
-		contemporary Galápagos populations, and demonstrate that scientific
-		collections are especially valuable for interpreting factors shaping species
-		distributions on high-endemism islands with recent rapid environmental
-		change.
+		We aggregated digitized herbarium and other collection
+		records{\textemdash}spanning \&gt;225 years since 1795{\textemdash}to assess
+		the biological, geographical, and historical factors shaping distributions of
+		three wild tomato species on the Gal{\'a}pagos Islands, and to infer future
+		threats to the two endemic species (Solanum cheesmaniae and S. galapagense)
+		and risks posed by their invasive congener (S. pimpinellifolium).Combining
+		\&gt;400 unique geolocated Gal{\'a}pagos records with bioclimate data and
+		species distribution modelling, we quantified the geo-spatial distribution of
+		each species, bracketed the historical timing and location of introductions
+		of the invasive species, characterized species bioclimate envelopes, and
+		projected suitable habitat overlap.We infer that dispersal limitation and
+		alternative selective histories shape current species distributions, and that
+		anthropogenic change has and will continue to have different impacts on the
+		two endemic species{\textemdash}closely associated with their different
+		geographic and environmental distributions. We also identify plausible
+		avenues for, and limits to, future invasive expansion.These data vastly
+		extend the temporal and spatial reach of our direct historical inferences,
+		provide a critical complement to genomic analyses of contemporary
+		Gal{\'a}pagos populations, and demonstrate that scientific collections are
+		especially valuable for interpreting factors shaping species distributions on
+		high-endemism islands with recent rapid environmental change.Competing
+		Interest StatementThe authors have declared no competing interest.
 	},
-	language     = {en}
+	eprint       = {https://www.biorxiv.org/content/early/2025/01/11/2025.01.09.632230.full.pdf}
 }
 @article{luhken_high_2024,
 	title        = {
@@ -608,9 +555,9 @@
 }
 @article{d17030195,
 	title        = {
-		{Assessing the Potential Risk of Invasion of the Neophyte \textit{Pluchea ovalis}
-		(Pers.) DC. (Asteraceae) in the Canarian Archipelago Using an Ensemble of
-		Species Distribution Modelling}
+		{Assessing the Potential Risk of Invasion of the Neophyte \textit{Pluchea
+		ovalis} (Pers.) DC. (Asteraceae) in the Canarian Archipelago Using an
+		Ensemble of Species Distribution Modelling}
 	},
 	author       = {
 		García-Alvarado, Juan José and Pestano-González, Miguel and
