--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -628,3 +628,69 @@
 		at smaller scales within Nova Scotia.
 	}
 }
+@phdthesis{salvador_baiges_clima_2024,
+	title        = {
+		Clima, orografia i dinàmiques de poblament al {Pirineu} {Central}.
+		{Arqueologia}, {SIG} i modelització espacial del patró d'ocupació del
+		territori durant el {Neolític} (5700- 2100 cal {ANE})
+	},
+	author       = {Salvador Baiges, Guillem and Gassiot Ballbè, Ermengol},
+	year         = 2024,
+	url          = {https://ddd.uab.cat/record/301073},
+	urldate      = {2025-03-31},
+	type         = {phd},
+	language     = {cat},
+	school       = {Universitat Autònoma de Barcelona},
+	keywords     = {
+		Arqueología del Paisaje, Arqueologia del Paisatge, Ciències Humanes, GIS,
+		Landscape archaeology, literature, Neolithic, Neolític, Neolítico, SIG, Tesi
+		doctoral, TEXT
+	}
+}
+@phdthesis{wiethase_advancing_2023,
+	title        = {
+		Advancing ecosystem understanding: {Identifying} the drivers of habitat
+		degradation, species distributions and species vulnerabilities in {East}
+		{African} grasslands.
+	},
+	shorttitle   = {Advancing ecosystem understanding},
+	author       = {Wiethase, Joris Hendrik},
+	year         = 2023,
+	month        = dec,
+	url          = {https://etheses.whiterose.ac.uk/id/eprint/34736/},
+	urldate      = {2025-03-31},
+	copyright    = {cc\_by\_nc\_nd\_4},
+	type         = {phd},
+	abstract     = {
+		Environments are changing at an accelerated rate, as a consequence of hu- man
+		activity. Many questions remain unanswered regarding the drivers of this
+		change in the landscape, the mechanisms by which species are affected, and
+		patterns of consequential species vulnerabilities. Here I use remote sensing
+		and machine learning to investigate pathways of savannah degradation; use
+		Bayesian species distribution models with data integration to test predictors
+		of range shifts in savannah birds; and evaluate a common climate change vul-
+		nerability assessment framework based on simulated data and foundational
+		concepts. I find that the most degraded savannah sites are those that de-
+		cline in resistance over time and tend to exhibit lower rainfall and higher
+		human and livestock density. However, I show that the same sites do not lose
+		their recovery potential, giving hope for their eventual restoration under
+		correct management. I find that degradation has increased across the whole
+		landscape, and that this increase was lowest for national parks and wildlife
+		management areas, underlining the effectiveness of these management strate-
+		gies for mitigating current degradation trends. Next, I find little support
+		for broad trait-range shift relationships across taxa, for either local
+		extinctions, local colonisations, or total change. This calls into question
+		the usefulness of traits in vulnerability assessments of taxa, where they are
+		applied to wider taxonomic groups. However, I also identify strong
+		species-specific relation- ships among the results, suggesting that more
+		research into those individual species might reveal important trait
+		relationships. Finally, I show that vulner- ability frameworks based on
+		separately assessed species sensitivity, exposure, and adaptive capacity,
+		such as many trait-based approaches, are fundamen- tally unable to accurately
+		predict true vulnerability of species. I showcase how recent advances in
+		species distribution modelling can be applied to develop revised
+		vulnerability metrics.
+	},
+	language     = {en},
+	school       = {University of York}
+}
