Add program to PHD

--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -640,7 +640,10 @@
 	urldate      = {2025-03-31},
 	type         = {phd},
 	language     = {cat},
-	school       = {Universitat Autònoma de Barcelona},
+	school       = {
+		Universitat Autònoma de Barcelona. Programa de Doctorat en Arqueologia
+		Prehistòrica
+	},
 	keywords     = {
 		Arqueología del Paisaje, Arqueologia del Paisatge, Ciències Humanes, GIS,
 		Landscape archaeology, literature, Neolithic, Neolític, Neolítico, SIG, Tesi
